NUX Onboarding: add a way to specify redirect url after sign-in.

In the NUX Onboarding welcome flow, it's necessary to direct the users back
to the chrome://welcome page after they finish signing in. Since the page
navigates to a remote location when the user is signing in, the specified URL
has to be stored in the sign-in helper in the backend.

Bug: 874147
Change-Id: I39126f1072d172fcec023de160889ac7f4ecb7b4
Reviewed-on: https://chromium-review.googlesource.com/1239353
Commit-Queue: Scott Chen <scottchen@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594559}