chrome/browser/ui/signin_view_controller.h
@@ -10,6 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/macros.h"
 #include "chrome/browser/ui/profile_chooser_constants.h"
+#include "url/gurl.h"
 
 class Browser;
 class SigninViewControllerDelegate;
@@ -43,7 +44,8 @@ class SigninViewController {
   // page.
   void ShowSignin(profiles::BubbleViewMode mode,
                   Browser* browser,
-                  signin_metrics::AccessPoint access_point);
+                  signin_metrics::AccessPoint access_point,
+                  const GURL& redirect_url = GURL::EmptyGURL());
 
 #if !defined(OS_CHROMEOS)
   // Shows the DICE-specific sign-in flow: opens a Gaia sign-in webpage in a new
@@ -52,7 +54,8 @@ class SigninViewController {
                          Browser* browser,
                          signin_metrics::AccessPoint access_point,
                          signin_metrics::PromoAction promo_action,
-                         const std::string& email);
+                         const std::string& email,
+                         const GURL& redirect_url = GURL::EmptyGURL());
 #endif  // !defined(OS_CHROMEOS)
 
   // Shows the modal sync confirmation dialog as a browser-modal dialog on top
