chrome/browser/resources/welcome/onboarding_welcome/landing_view.js
@@ -10,7 +10,8 @@ Polymer({
 
   /** @private */
   onExistingUserClick_: function() {
-    welcome.WelcomeBrowserProxyImpl.getInstance().handleActivateSignIn();
+    welcome.WelcomeBrowserProxyImpl.getInstance().handleActivateSignIn(
+        'chrome://welcome/returning-user');
   },
 
   /** @private */
